2007-03-13  C.J. Adams-Collier <cjcollier@colliertech.org>
	Overview: Installing assemblies into gacutil of $prefix rather
	than /usr
	
	* configure.ac:
	  setting up some gacutil flags
	* src/Makefile.am
	- using these gacutil flags in the calls to gacutil
	- removed excess whitespace

2006-07-26  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* configure.ac:
	* src/Makefile.am:
	* src/jscallglue/Makefile.am:
	* jscall-sharp.pc.in:
	  Use libtool to install the glue library properly.
	  Install the assembly to the GAC.
	
	* src/jscall.dll.config.in: Use versioned name for glue library.
	
	* src/AssemblyInfo.cs.in:
	* jscall.key: Set key for strong name so we can install to the GAC. 

2006-07-14  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* jscall-sharp.pc.in: Add MozillaHome variable, so that consumers can 
	determine against which gtkmozembed JSCall was built.

2006-07-04  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* jscall-sharp.pc.in: Fix dll names, and add a way to locate glue 
	library and JS script.