@@ -1,3 +1,5 @@
+This software is licensed under the terms of the MIT/X11 Licence:
+
 Copyright (c) 2006-2007 the individuals listed on the ChangeLog entries.
 
 Permission is hereby granted, free of charge, to any person obtaining
