@@ -1,3 +1,11 @@
+2007-04-02  Michael Hutchinson <m.j.hutchinson@gmail.com>
+
+	* COPYING: Explicitly name the MIT/X11 license.
+
+2007-04-02  Boyd Timothy <btimothy@gmail.com>
+
+	* Makefile.am: Fix "make distcheck".
+
 2007-03-13  C.J. Adams-Collier <cjcollier@colliertech.org>
 	Overview: Installing assemblies into gacutil of $prefix rather
 	than /usr
